[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adoutils"
version = "0.2.0"
authors = [
    { name="Gonzalo Pincheira", email="javiercaceres1511@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "num2words==0.5.12"
]

[project.urls]
"Homepage" = "https://github.com/Javier-Caceres-M/ado-fork"
"Bug Tracker" = "https://github.com/Javier-Caceres-M/ado-fork/issues"
